# ai-deepfake-detection

./: INSTALLATION_GUIDE.md  LICENSE  README.md  debug_model.py  debug_system.py  pyproject.toml  shell.nix  simple_api_test.py  test_detection.py  test_extension.py  test_hf_model.py  test_video_detection.py  test_wav2vec2.py
backend/: app.py  test_text.py
backend/services/: __init__.py  ai_service.py  ai_service_fast.py  ai_service_optimized.py  hf_api_service.py  text_service.py
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  welcome.html
